# multi-modal-search

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/mulmod/: extract.py  img.py  main.py  summary.py
src/mulmod/retrieve/: custom_vector.py  rag.py  retriever.py
