[tool.poetry]
name = "mulmod"
version = "0.1.0"
description = "Multi modal search on documents"
authors = ["Adam Osusky"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.1.11"
unstructured = {extras = ["all-docs"], version = "^0.12.0"}
pydantic = "^2.6.4"
lxml = "^5.1.0"
gpt4all = "^2.2.1.post1"
chromadb = "^0.4.24"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
